# sql-indexing

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.agent/rules/: coding-guide.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agent/: __init__.py  graph.py  greeting_agent.py  models.py  reasoning_agent.py  router.py
backend/app/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/connections/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/intelligence/: __init__.py  extractor.py  indexer.py  router.py  service.py  vectorizer.py
backend/app/rag/: tools.py
backend/app/system/: __init__.py  router.py
backend/app/users/: __init__.py  models.py  router.py
docs/: 01-architecture-overview.md  02-backend-modules.md  03-frontend-documentation.md  04-data-models.md  05-api-reference.md  06-development-guide.md  07-configuration-reference.md  08-deployment-guide.md  README.md  brainstom-idea.md
frontend/: .dockerignore  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/chat/[token]/: page.tsx
frontend/src/app/databases/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/ui/: card.tsx  toast.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: api.ts  auth.ts  utils.ts
